@@ -19,6 +19,7 @@ Now
  * Set maximum stack depth in Environment::Eval.
  * Add test for infinity recursion.
  * Add Ackermann function for tests.
+ * Use stack instead recursive check for equality.
 
 Version 0.0.0.7 2010-12-01
  * Make GP::CheckForParam more strict.
